# zookeeper-wasm

./: .gitignore  Cargo.toml  GEMINI.md  Makefile  README.md  build.sh  index.html  push_and_verify.sh
.cargo/: config.toml
.github/workflows/: deploy.yml
games/zookeeper/: Cargo.toml  Makefile  index.html
games/zookeeper/scripts/: download_assets.py  pyproject.toml
games/zookeeper/src/: main.rs
games_repo/: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  index.html  index.template.html  push_and_verify.sh
games_repo/.github/workflows/: deploy.yml
games_repo/games/bubbles/: Cargo.toml  Makefile  index.html
games_repo/games/bubbles/src/: audio.rs  game.rs  gfx.rs  input.rs  main.rs  storage.rs
games_repo/games/gravitris/: Cargo.toml  Makefile  index.html
games_repo/games/gravitris/src/: audio.rs  game.rs  input.rs  main.rs
games_repo/games/jetpac/: Cargo.toml  Makefile  index.html
games_repo/games/jetpac/src/: audio.rs  game.rs  main.rs  physics.rs
games_repo/games/jetpac_wasm/: Cargo.toml  Makefile
games_repo/games/jetpac_wasm/src/: game.rs  physics.rs
games_repo/games/lumines/: Cargo.toml  Makefile  TODO.md  index.html
games_repo/games/lumines/src/: audio.rs  (+1 more)
games_repo/games/music_editor/: Cargo.toml  Makefile  index.html
games_repo/games/shared/: Cargo.toml
games_repo/games/voxeldash/: Cargo.toml  Makefile  index.html
games_repo/games/voxeldash/src/: lib.rs
games_repo/games/zookeeper/: Cargo.toml  Makefile  index.html
games_repo/scripts/: audio_unlock.js
jetpac_wasm/: Cargo.toml  Makefile  index.html
jetpac_wasm/src/: audio.rs  game.rs  main.rs
scripts/: bump_version.py  download_assets.py  pyproject.toml  run_all_tests.sh
src/: main.rs
(+12 files in other folders)
