[workspace]
members = [
    "games_repo/games/shared",
    "games_repo/games/zookeeper",
    "games_repo/games/bubbles",
    "games_repo/games/lumines",
    "games_repo/games/music_editor",
    "games_repo/games/gravitris",
]
resolver = "2"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true
