[package]
name = "jetpac"
version = "26.3.51331"
edition = "2021"

[dependencies]
macroquad = "0.4"

[lints.rust]
unsafe_code = "forbid"
warnings = "deny"

[lints.clippy]
pedantic = "deny"
nursery = "warn"
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
