[package]
name = "voxeldash"
version = "26.3.300000"
edition = "2021"

[dependencies]
wasm-bindgen = "=0.2.100"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "Node", "SvgElement"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
